# dmlangsel

./: .cvsignore  Makefile.inc  configure.ac  dmlangsel-compat-gdm.c  dmlangsel-compat-gdm.h  dmlangsel.c  dmlangsel.desktop.in  dmlangsel.h  dmlangsel.spec.in  gdm-config.c  gdmlanguages.c
po/: .cvsignore  POTFILES.in  de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  sv.po  zh_CN.po  zh_TW.po
